--- a/src/shared/components/Modal/ChangePasswordModal.scss
+++ b/src/shared/components/Modal/ChangePasswordModal.scss
@@ -43,9 +43,9 @@
       background: none;
     }
     input {
-      background-color: var(--default-background-popup-color) !important;
+      background-color: transparent !important;
 
-      height: 40px !important;
+      height: var(--default-btn-height) !important;
       color: var(--white);
       font-size: 18px;
     }
