--- a/src/routers/components/DefaultLayout/DefaultLayout.scss
+++ b/src/routers/components/DefaultLayout/DefaultLayout.scss
@@ -23,6 +23,7 @@
       background-color: var(--default-background-popup-color);
     }
     .body-contain-wrap {
+      margin-left: 25px;
       background-color: var(--default-background-popup-color);
     }
     .ant-layout {
