--- a/src/shared/components/Card/styles.scss
+++ b/src/shared/components/Card/styles.scss
@@ -6,11 +6,11 @@
 .custom-card-item__wrap {
   background: rgba(57, 57, 85, 0.7);
   min-height: 150px;
-  height: 250px;
+  height: 300px;
   margin: 0px 0px 20px 0px;
   border-radius: 8px;
   .custom-card-item__image {
-    height: 125px;
+    height: 150px;
     overflow: hidden;
     border-radius: 8px 8px 0 0;
     width: 100%;
@@ -33,7 +33,7 @@
   }
 
   .custom-card-item__body {
-    height: 125px;
+    height: 150px;
     padding: 5px 10px;
     text-align: start;
     display: flex;
@@ -43,9 +43,11 @@
       font-weight: 500;
       color: var(--white);
       font-size: 14px;
+      padding-bottom: 5px;
+      padding-top: 2px;
     }
     &-content {
-      height: calc(125px - 35px);
+      height: calc(150px - 45px);
       display: flex;
       flex-direction: column;
       justify-content: space-between;
@@ -54,30 +56,34 @@
         color: #f5f5ff;
       }
       div span.main {
+        margin: 5px auto 5px 0px;
         color: white;
         padding-right: 10px;
         font-weight: 700;
         font-size: 12px;
       }
+
       .wrap-box {
         display: flex;
+        align-items: center;
         .box-item {
           border: 1px solid #727288;
-          border-radius: 6px;
-          padding: 2px 5px;
+          border-radius: 4px;
+          padding: 4px 8px;
           display: flex;
           flex-direction: column;
           align-items: center;
 
           &-title {
             color: #727288;
-            font-size: 5px;
-            line-height: 7px;
+            font-size: 7px;
+            line-height: 8px;
+            margin-bottom: 2.5px;
           }
           &-content {
-            font-size: 6px;
+            font-size: 8px;
             font-weight: 500;
-            line-height: 7px;
+            line-height: 8px;
           }
         }
         .box-item + .box-item {
