--- a/src/shared/components/Modal/ChangePasswordModal.scss
+++ b/src/shared/components/Modal/ChangePasswordModal.scss
@@ -121,3 +121,9 @@
     }
   }
 }
+textarea.ant-input {
+  background-color: transparent;
+  border-radius: 8px;
+  color: var(--white);
+  border: 0.9px solid #727288 !important;
+}
