--- a/src/shared/components/Tab/styles.scss
+++ b/src/shared/components/Tab/styles.scss
@@ -18,3 +18,31 @@
     color: #ff7506;
   }
 }
+.tab-switch-wrap {
+  color: white;
+  border: 1px solid #b65100;
+  border-radius: 24px;
+  box-sizing: border-box;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-style: inset;
+  height: 35px;
+  span {
+    display: flex;
+    height: 100%;
+    box-sizing: border-box;
+    align-items: center;
+    justify-content: center;
+
+    width: 200px;
+    cursor: pointer;
+  }
+  span.active {
+    cursor: default;
+    background: #b65100;
+    border-radius: 24px;
+    height: calc(100% + 1px);
+    width: 200px;
+  }
+}
