feat: create UI page create mining contract, fetch, change data in profile page

--- a/src/shared/components/Modal/ChangePasswordModal.scss
+++ b/src/shared/components/Modal/ChangePasswordModal.scss
@@ -127,3 +127,36 @@ textarea.ant-input {
   color: var(--white);
   border: 0.9px solid #727288 !important;
 }
+
+.main-form {
+  .ant-select-selector {
+    background: #2b2b3f !important;
+    height: 40px !important;
+    border-radius: 8px !important;
+    border: none !important;
+    display: flex;
+    align-items: center;
+    color: white;
+  }
+  .ant-select-arrow {
+    color: #ff9138;
+  }
+}
+.form-item-horizon {
+  .ant-row {
+    display: flex;
+    flex-direction: row;
+  }
+  .ant-form-item-control {
+    width: auto !important;
+    .ant-btn {
+      background-color: transparent;
+      color: #ff9138;
+      border-radius: 8px;
+      border-color: #ff9138;
+    }
+  }
+}
+.modal-container {
+  width: 600px !important;
+}
