--- a/src/view/Manage/Contracts/components/CreateContract/styles.scss
+++ b/src/view/Manage/Contracts/components/CreateContract/styles.scss
@@ -37,6 +37,16 @@
       margin-left: 5px;
     }
   }
+  .ant-input-status-error {
+    background-color: #2b2b3f !important;
+    border: 1px solid red !important;
+  }
+  .ant-select-selector {
+    background-color: #2b2b3f !important;
+    &:hover {
+      background-color: transparent !important;
+    }
+  }
   .ant-input-affix-wrapper.ant-input-password {
     background: #2b2b3f;
     height: 40px;
@@ -82,5 +92,118 @@
   }
   .ant-form-item {
     margin-bottom: 10px;
+  }
+}
+
+.add-records-to-contract {
+  width: 500px;
+  height: 400px;
+  background: #2b2b3f;
+  border-radius: 16px;
+  padding: 5px 30px;
+  .title-custom {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    height: 60px;
+    border-bottom: 1px solid #c8c8db;
+    margin-bottom: 20px;
+    &-icon {
+      color: white;
+      padding-right: 5px;
+    }
+    &-content {
+      color: #ffffff;
+      font-weight: 700;
+      font-size: 20px;
+      line-height: 20px;
+      margin-bottom: 0px;
+    }
+  }
+  .ant-divider {
+  }
+  .body-custom {
+    display: flex;
+
+    justify-content: center;
+    flex-direction: column;
+    .body-topic-title {
+      text-align: start;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 24px;
+      color: #ffffff;
+    }
+    .body-topic-content + .body-topic-content {
+      margin-top: 35px;
+    }
+    .body-topic-content {
+      margin-left: 30px;
+      display: flex;
+      .left {
+        color: #ff7506;
+        font-weight: 700;
+        font-size: 14px;
+        line-height: 20px;
+        padding-right: 10px;
+      }
+      .right {
+        text-align: start;
+        display: flex;
+        flex-direction: column;
+        button {
+          margin-top: 15px;
+          width: 200px;
+          border-radius: 8px;
+        }
+        .ant-btn {
+          font-weight: 600;
+          font-size: 14px;
+          line-height: 24px;
+        }
+        .ant-btn:not(.ant-btn-ghost) {
+          background-color: #ff7506;
+          border: none;
+        }
+        .ant-btn-ghost {
+          span {
+            color: #ff7506;
+          }
+          border: 1px solid #ff7506;
+        }
+        span {
+          color: #ffffff;
+        }
+      }
+    }
+    .note {
+      color: #ff4747;
+      text-align: start;
+      margin-top: 15px;
+    }
+  }
+}
+
+.type-mining-contract {
+  display: flex;
+  margin-bottom: 15px;
+  &-label {
+    color: white;
+
+    padding-right: 10px;
+    font-weight: 100px;
+    font-size: 15px;
+    width: 150px;
+  }
+  .ant-form-item-label {
+    span {
+      font-size: 13px;
+      font-weight: 100px;
+      white-space: normal;
+      padding-bottom: 5px;
+    }
+    .ant-form-item-required {
+    }
   }
 }
