--- a/src/view/Auth/Login/Login.scss
+++ b/src/view/Auth/Login/Login.scss
@@ -29,7 +29,7 @@
   }
   .title {
     position: absolute;
-    top: 407px;
+    top: 25.5rem;
     left: calc(79px + 375px);
     display: flex;
     flex-direction: column;
