--- a/src/view/Playlist/component/AddPlaylist/styles.scss
+++ b/src/view/Playlist/component/AddPlaylist/styles.scss
@@ -23,14 +23,7 @@
     border-radius: 16px;
     padding: 15px;
   }
-  .page__title {
-    .ant-typography {
-      color: var(--white) !important;
-      font-size: 1.2rem;
-      font-weight: 500;
-    }
-    margin-bottom: 10px;
-  }
+
   .ant-col {
     box-sizing: border-box;
   }
@@ -141,4 +134,12 @@
   .ant-input-wrapper {
     background: #33334d !important;
   }
+}
+.page__title {
+  .ant-typography {
+    color: white !important;
+    font-size: 2rem !important;
+    font-weight: 700;
+  }
+  margin-bottom: 7px;
 }
