--- a/src/shared/components/Modal/ExtendContractModal.scss
+++ b/src/shared/components/Modal/ExtendContractModal.scss
@@ -49,7 +49,22 @@
       background-color: transparent !important;
     }
   }
-
+  .ant-input-number {
+    background: #2b2b3f;
+    border-radius: 8px;
+    width: 3rem;
+    // border: 1px solid #727288;
+    color: white;
+    .ant-input-number-handler-wrap {
+      display: none;
+    }
+    .ant-input-number-input-wrap {
+      input {
+        background-color: transparent;
+        border-radius: 8px;
+      }
+    }
+  }
   .ant-input {
     background: #2b2b3f;
     border-radius: 8px;
@@ -77,6 +92,9 @@
         flex-direction: row;
       }
     }
+  }
+  .disable {
+    opacity: 0.5 !important;
   }
   .checkbox-option2 {
     .ant-form-item-label {
